# Whisplay-Launcher

./: .gitignore  Cargo.toml  README.md  apps.json  exit_helper.py
settings/: settings.py  whisplay_hw.py
src/: apps.rs  button.rs  display.rs  framebuffer.rs  led.rs  main.rs  menu.rs  status.rs
