[package]
name = "whisplay-launcher"
version = "0.1.0"
edition = "2021"
description = "Fast native app launcher for the PiSugar Whisplay HAT"
repository = "https://github.com/Akerrules/Whisplay-Launcher"


[dependencies]
embedded-graphics = "0.8"
image = { version = "0.25", default-features = false, features = ["ico", "png", "bmp", "jpeg"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"
signal-hook = "0.3"
u8g2-fonts = "0.5"

[target.'cfg(target_os = "linux")'.dependencies]
rppal = "0.22"

[profile.release]
opt-level = "z"
lto = true
strip = true
